syntax = "proto3";
//定义用户服务
service UserService{
    //注册用户
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {}
    //登录用户
    rpc LoginUser(LoginRequest) returns (LoginResponse){}
    //退出登录
    rpc LogOutUser(LogOutRequest) returns (LogOutResponse){}
}

message RegisterRequest{
    string email = 1;
    string username = 2;
    string password = 3;
}

message RegisterResponse{
    int64 code = 1;
    string message = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    int64 code = 1;
    string message = 2;
}

message LogOutRequest{
    string token = 1;
}

message LogOutResponse{
    int64 code = 1;
    string message = 2;
}

